fix: main buttons align of text

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -97,7 +97,9 @@ footer {
     background-color: #0a276a;
     font-size: 16px;
     cursor: pointer;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
         0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s ease-out;
